# ImagePlayground

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_model_column_to_jobs.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: auth.py  images.py  jobs.py  models.py  presets.py
backend/src/core/: __init__.py  config.py  database.py  security.py
backend/src/models/: __init__.py  daily_usage.py  image.py  job.py  preset.py  user.py
backend/src/schemas/: auth.py  image.py  job.py  preset.py
backend/src/scripts/: seed_presets.py
backend/src/services/: auth_service.py  hf_client.py  image_service.py  job_service.py  local_inference.py
backend/tests/: conftest.py
frontend/: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/canvas/: BrushTool.tsx  CanvasToolbar.tsx  EraserTool.tsx  MaskCanvas.tsx  MaskExporter.ts  index.ts
frontend/src/components/common/: Layout.tsx  ProtectedRoute.tsx  UsageIndicator.tsx
frontend/src/components/generation/: GenerateButton.tsx  GenerationModeSelector.tsx  ImagePreview.tsx  ImageUploader.tsx  JobStatusIndicator.tsx  ModelSelector.tsx  ParameterPanel.tsx  PresetSelector.tsx  PromptInput.tsx  ResizeOptions.tsx  StrengthSlider.tsx
frontend/src/hooks/: useAuth.ts  useCanvas.ts  useJobs.ts  usePresets.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  canvasStore.ts  generationStore.ts
frontend/src/test/: test-utils.tsx
frontend/src/types/: index.ts
specs/001-ai-image-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-image-generator/checklists/: requirements.md
specs/001-ai-image-generator/contracts/: openapi.yaml
